--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div>
             <h1 class="display-1 text-center mt-1 bg-danger font-weight-bold welcome">SORPANOS FAMILY PIZZARIA</h1>
-            <p class="lead text-center welcome">FROME NABOLI TO BRUSSELS,ITALIANO VERO</p>
+            <p class="lead text-center welcome">FROME NAPOLI TO BRUSSELS,ITALIANO VERO</p>
         </div>
     </div>
       </div>
