--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <div class="card-body">
                 <h6 class="card-title"> CHECK OUT OUR MENU!</h6>
                 <p class="card-text"> WE ARE OPEN ALL WEEK 24H , SO YOU NEVER FEEL HUNGRY!</p>
-                <a href="menu.html" class="btn btn-danger text-dark">Menu</a>
+                <a href="Menu.html" class="btn btn-danger text-dark">Menu</a>
             </div>
             </div>
             <div class="card pt-1 mx-1 my-1 ">
@@ -71,7 +71,7 @@
               <div class="card-body">
                 <h6 class="card-title">ALL KIND OF REAL ITALIAN PIZZA! (NO ANANNAS PIZZA)</h6>
                 <p class="card-text"> WE ARE OPEN ALL WEEK 24H , SO YOU NEVER FEEL HUNGRY!</p>
-                <a href="menu.html" class="btn btn-danger text-dark">Menu</a>
+                <a href="Menu.html" class="btn btn-danger text-dark">Menu</a>
               </div>
             </div>
             <div class="card pt-1 mx-1 my-1 ">
@@ -79,7 +79,7 @@
               <div class="card-body">
                 <h6 class="card-title">ANY ORDER MORE THAN 50$ DELEVIRY WILL BE FREE</h6>
                 <p class="card-text"> WE ARE OPEN ALL WEEK 24H , SO YOU NEVER FEEL HUNGRY!</p>
-                <a href="menu.html" class="btn btn-danger text-dark">Menu</a>
+                <a href="Menu.html" class="btn btn-danger text-dark">Menu</a>
           </div>
         </div>
      </section>
